@@ -1,4 +1,4 @@
 include *.py
 include *.txt
-recursive-include test
+recursive-include test *.py *.json
 include docs/*.txt
