@@ -8,6 +8,12 @@ Version 1.7 released 2014-04-13
 
  * The "jsonlint" script command will now be installed by default.
 
+ * jsonlint improvements:
+       - Fixed reading from stdin
+       - New -o option to specify output filename
+       - Verbosity on by default, new --quiet option
+       - Better help text
+
 Version 1.6 released 2011-04-01
 
  * Bug fix. The jsonlint tool failed to accept a JSON document from
